added update to order totals

--- a/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
+++ b/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
@@ -53,14 +53,14 @@
                 *comes with a side of fries topped with sea salt and a side of onion rings.</p>
         </details>
         <div class="ordering">
-            <button class="orderbtn">Add to order</button>
+            <button class="orderbtn" id="cheeseburgerbtn">Add to order</button>
            <label for="quantity">Quantity</label>
-            <select name="quantity" id="quantity" value="1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+            <select name="burgerquantity" id="burgerquantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
             </select>
         </div>
     </div>
@@ -75,14 +75,14 @@
                 *comes with a side of potato wedges and guacamole dip.</p>
         </details>
         <div class="ordering">
-            <button class="orderbtn">Add to order</button>
+            <button class="orderbtn" id="farmercharmbtn">Add to order</button>
            <label for="quantity">Quantity</label>
-            <select name="quantity" id="quantity" value="1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+            <select name="farmercharmquantity" id="farmercharmquantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
             </select>
         </div>
     </div>
@@ -96,14 +96,14 @@
                 *comes with a side of coleslaw and mashed potatoes.</p>
         </details>
         <div class="ordering">
-        <button class="orderbtn">Add to order</button>
+        <button class="orderbtn" id="joebtn">Add to order</button>
        <label for="quantity">Quantity</label>
-        <select name="quantity" id="quantity" value="1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+        <select name="joequantity" id="joequantity">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
         </select>
     </div>
     </div>
@@ -118,14 +118,14 @@
                     *comes with a side of mashed potatoes and broccoli.</p>
             </details>
             <div class="ordering">
-                <button class="orderbtn">Add to order</button>
+                <button class="orderbtn" id="alfredobtn">Add to order</button>
                <label for="quantity">Quantity</label>
-                <select name="quantity" id="quantity" value="1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <select name="alfredoquantity" id="alfredoquantity">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
                 </select>
             </div>
         </div>
@@ -137,14 +137,14 @@
                     *comes with a asparagus and corn.</p>
             </details>
             <div class="ordering">
-                <button class="orderbtn">Add to order</button>
+                <button class="orderbtn" id="lasagnabtn">Add to order</button>
                <label for="quantity">Quantity</label>
-                <select name="quantity" id="quantity" value="1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <select name="lasagnaquantity" id="lasagnaquantity">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
                 </select>
             </div>
         </div>
@@ -156,14 +156,14 @@
                     *comes with corn and a loaded baked potato.</p>
             </details>
             <div class="ordering">
-                <button class="orderbtn">Add to order</button>
+                <button class="orderbtn" id="spaghettibtn">Add to order</button>
                <label for="quantity">Quantity</label>
-                <select name="quantity" id="quantity" value="1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <select name="spaghettiquantity" id="spaghettiquantity">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
                 </select>
             </div>
         </div>
@@ -178,14 +178,14 @@
                         *comes with breadsticks.</p>
                 </details>
                 <div class="ordering">
-                    <button class="orderbtn">Add to order</button>
+                    <button class="orderbtn" id="pizzabtn">Add to order</button>
                    <label for="quantity">Quantity</label>
-                    <select name="quantity" id="quantity" value="1">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                    <select name="pizzaquantity" id="pizzaquantity">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                 </div>
             </div>
@@ -198,14 +198,14 @@
                         *comes with your choice of dressing.</p>
                 </details>
                 <div class="ordering">
-        <button class="orderbtn">Add to order</button>
+        <button class="orderbtn" id="saladbtn">Add to order</button>
        <label for="quantity">Quantity</label>
-        <select name="quantity" id="quantity" value="1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+        <select name="saladquantity" id="saladquantity">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
         </select>
     </div>
             </div>
@@ -218,14 +218,14 @@
                         *comes with your choice of dip.</p>
                 </details>
                 <div class="ordering">
-        <button class="orderbtn">Add to order</button>
+        <button class="orderbtn" id="tofubtn">Add to order</button>
        <label for="quantity">Quantity</label>
-        <select name="quantity" id="quantity" value="1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+        <select name="tofuquantity" id="tofuquantity">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
         </select>
     </div>
             </div>
@@ -240,14 +240,14 @@
                             *comes with a side of buttered toast.</p>
                     </details>
                     <div class="ordering">
-                        <button class="orderbtn">Add to order</button>
+                        <button class="orderbtn" id="chickenwafflesbtn">Add to order</button>
                        <label for="quantity">Quantity</label>
-                        <select name="quantity" id="quantity" value="1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                        <select name="chickenwafflesquantity" id="chickenwafflesquantity" value="1">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
                     </div>
                 </div>
@@ -259,14 +259,14 @@
                             *comes with a side of hash browns and buttered toast.</p>
                     </details>
                     <div class="ordering">
-                        <button class="orderbtn">Add to order</button>
+                        <button class="orderbtn" id="omelettebtn">Add to order</button>
                        <label for="quantity">Quantity</label>
-                        <select name="quantity" id="quantity" value="1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                        <select name="omelettequantity" id="omelettequantity">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
                     </div>
                 </div>
@@ -278,14 +278,14 @@
                             *comes with a side of hashbrowns and buttered toast.</p>
                     </details>
                     <div class="ordering">
-                        <button class="orderbtn">Add to order</button>
+                        <button class="orderbtn" id="burritobtn">Add to order</button>
                        <label for="quantity">Quantity</label>
-                        <select name="quantity" id="quantity" value="1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                        <select name="burritoquantity" id="burritoquantity">
+                            <option selected="selected" value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
         <input type="text" id="phonenum" name="phonenum">
     </div>
     <div class="forminput">
-        <p>Select a payment method:</p>
+        <p style="text-align: center;">Select a payment method:</p>
         <input type="radio" id="debitcard" name="payment" value="card">
         <label for="debitcard">Debit/Credit Card</label>
         <input type="radio" id="cash" name="payment" value="cash">
@@ -318,7 +318,6 @@
     </div>
     <input type="submit" value="Submit" id="submitbtn">
 </form>
-<details>
 <summary style="text-align: center;"><h2>Order Summary</h2></summary>
 <div class="ordersummary">
     <ul>
@@ -326,14 +325,13 @@
             <h2 style="text-align: center;">Food:</h2>
             <li>Item 1:</li>
             <li>Price: $</li>
-            <li>Quantity: </li>
+            <li>Quantity: 0</li>
         </ul>
-        <li>Tax: $</li>
-        <li>Tip: $</li>
-        <li>Total: $</li>
+        <li id="taxtotal">Tax: $0.00</li>
+        <li id="tiptotal">Tip: $0.00</li>
+        <li id="ordertotal">Total: $0.00</li>
     </ul>
 </div>
-</details>
 </section>
 
 
