added more ordersummary functionality. add menu item objects with price and quantity properties

--- a/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
+++ b/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
@@ -151,7 +151,7 @@
         <div class="currentmenu">
             <img src="../images/pasta_spaghetti.jpg">
             <details>
-                <summary>Spaghetti <span>$12.99</span class="prices"></summary>
+                <summary>Spaghetti <span class="prices">$12.99</span></summary>
                 <p>Our spaghetti comes with garlic and basil infused tomato sauce.
                     *comes with corn and a loaded baked potato.</p>
             </details>
@@ -295,19 +295,20 @@
                 <section class="checkoutcontainer">
 <form class="foodform">
     <div class="forminput">
+        <h2>Contact Info:</h2>
         <label for="fname">First Name:</label>
-        <input type="text" id="fname" name="fname">
+        <input type="text" id="fname" name="fname" placeholder="First Name">
         <br>
         <label for="lname">Last Name:</label>
-        <input type="text" id="lname" name="lname">
+        <input type="text" id="lname" name="lname" placeholder="Last Name">
     </div>
     <div class="forminput">
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
+        <input type="text" id="email" name="email" placeholder="youremailhere@email.com">
     </div>
     <div class="forminput">
         <label for="phonenum">Phone Number:</label>
-        <input type="text" id="phonenum" name="phonenum">
+        <input type="text" id="phonenum" name="phonenum" placeholder="(***) ***-****">
     </div>
     <div class="forminput">
         <p style="text-align: center;">Select a payment method:</p>
