need to fix for loop on array of food item

--- a/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
+++ b/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
@@ -324,9 +324,7 @@
     <ul>
         <ul>
             <h2 style="text-align: center;">Food:</h2>
-            <li>Item 1:</li>
-            <li>Price: $</li>
-            <li>Quantity: 0</li>
+            <li id="foodcart"></li>
         </ul>
         <li id="taxtotal">Tax: $0.00</li>
         <li id="tiptotal">Tip: $0.00</li>
