small changes preparing to make cart

--- a/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
+++ b/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
@@ -47,7 +47,7 @@
     <div class="currentmenu">
         <img src="../images/burger_cheeseburger.jpg">
         <details>
-            <summary>The <em>Amazing</em> Cheeseburger <span class="prices">$14.99</span></summary>
+            <summary><strong>The <em>Amazing</em> Cheeseburger <span class="prices">$14.99</span></strong><br>&starf;Popular&starf;</summary>
             <p>Our <em>Amazing</em> Cheeseburger has been a staple and a fan favorite at our cafeteria. First timers can always count on a pleasant experience
                  with our fine cheddar and 95% lean beef patties, smoked for a great tasting burger.
                 *comes with a side of fries topped with sea salt and a side of onion rings.</p>
@@ -69,7 +69,7 @@
     <div class="currentmenu">
         <img src="../images/burger_chickenbaconegg.jpg">
         <details>
-            <summary>Farmer Charmer <span class="prices">$13.99</span></summary>
+            <summary><strong>Farmer Charmer <span class="prices">$13.99</span></strong></summary>
             <p>The Farmer Charmer comes with a butter glazed bun topped with sesame seeds, grilled chicken, 3 bacon strips, and 2 eggs any style. All of these ingredients come
                 from our local farms.
                 *comes with a side of potato wedges and guacamole dip.</p>
@@ -91,7 +91,7 @@
     <div class="currentmenu">
         <img src="../images/burger_sloppyjoe.jpg">
         <details>
-            <summary>The Joe <span class="prices">$10.99</span></summary>
+            <summary><strong>The Joe <span class="prices">$10.99</span></strong></summary>
             <p>The Joe comes with a butter glazed bun and 95% lean ground beef. Our special in house sloppy joe sauce makes all the difference, here.
                 *comes with a side of coleslaw and mashed potatoes.</p>
         </details>
@@ -113,7 +113,7 @@
         <div class="currentmenu">
             <img src="../images/pasta_fettuccine.jpg">
             <details>
-                <summary>Fettuccine Alfredo <span class="prices">$12.99</span></summary>
+                <summary><strong>Fettuccine Alfredo <span class="prices">$12.99</span></strong></summary>
                 <p>Our fettuccine alfredo comes with a family secret homemade alfredo sauce that has won numerous awards.
                     *comes with a side of mashed potatoes and broccoli.</p>
             </details>
@@ -132,7 +132,7 @@
         <div class="currentmenu">
             <img src="../images/pasta_lasagna.jpg">
             <details>
-                <summary>Beef Lasagna <span class="prices">$11.99</span></summary>
+                <summary><strong>Beef Lasagna <span class="prices">$11.99</span></strong><br>&starf;Popular&starf;</summary>
                 <p>Our beef lasagna is topped with feta and mozzarella cheese.
                     *comes with a asparagus and corn.</p>
             </details>
@@ -151,7 +151,7 @@
         <div class="currentmenu">
             <img src="../images/pasta_spaghetti.jpg">
             <details>
-                <summary>Spaghetti <span class="prices">$12.99</span></summary>
+                <summary><strong>Spaghetti <span class="prices">$12.99</span></strong><br>&starf;Popular&starf;</summary>
                 <p>Our spaghetti comes with garlic and basil infused tomato sauce.
                     *comes with corn and a loaded baked potato.</p>
             </details>
@@ -173,7 +173,7 @@
             <div class="currentmenu">
                 <img src="../images/vegan_pizzaoliveartichoke.jpg">
                 <details>
-                    <summary>Olive and Artichoke Pizza <span class="prices">$14.99</span></summary>
+                    <summary><strong>Olive and Artichoke Pizza <span class="prices">$14.99</span></strong><br>&starf;Popular&starf;</summary>
                     <p>Our signature vegan dish is a pizza with olives and artichoke. Toppings can be swapped.
                         *comes with breadsticks.</p>
                 </details>
@@ -193,7 +193,7 @@
             <div class="currentmenu">
                 <img src="../images/vegan_salad.jpg">
                 <details>
-                    <summary>Vegetable Salad <span class="prices">$9.50</span></summary>
+                    <summary><strong>Vegetable Salad <span class="prices">$9.50</span></strong></summary>
                     <p>This vegetable salad includes avocados, tomatoes, spinash, olives, and croutons.
                         *comes with your choice of dressing.</p>
                 </details>
@@ -213,7 +213,7 @@
             <div class="currentmenu">
                 <img src="../images/vegan_tofurice.jpg">
                 <details>
-                    <summary>Tofu Rice with Broccoli <span class="prices">$11.79</span></summary>
+                    <summary><strong> Rice with Broccoli <span class="prices">$11.79</span></strong></summary>
                     <p>This fan favorite tofu dish comes with delicious rice and steamed broccoli.
                         *comes with your choice of dip.</p>
                 </details>
@@ -235,7 +235,7 @@
                 <div class="currentmenu">
                     <img src="../images/breakfast_chickentenderwaffles.jpg">
                     <details>
-                        <summary>Fried Chicken Tenders with Waffles <span class="prices">$13.99</span></summary>
+                        <summary><strong>Fried Chicken Tenders with Waffles <span class="prices">$13.99</span></strong><br>&starf;Popular&starf;</summary>
                         <p>Our fried chicken tenders and waffles are our most popular breakfast dish for a reason. Top them off with our signature style Honestly <em>Amazing</em> syrup.
                             *comes with a side of buttered toast.</p>
                     </details>
@@ -254,7 +254,7 @@
                 <div class="currentmenu">
                     <img src="../images/breakfast_omelette.jpg">
                     <details>
-                        <summary>4 Egg Omelette <span class="prices">$10.99</span></summary>
+                        <summary><strong>4 Egg Omelette <span class="prices">$10.99</span></strong></summary>
                         <p>Pick your own spices and add any additional protein ($1.50 extra) to your 4 egg any way you want it omelette.
                             *comes with a side of hash browns and buttered toast.</p>
                     </details>
@@ -273,7 +273,7 @@
                 <div class="currentmenu">
                     <img src="../images/breakfast_sausageburrito.jpg">
                     <details>
-                        <summary>Sausage Burrito <span class="prices">$8.99</span></summary>
+                        <summary><strong>Sausage Burrito <span class="prices">$8.99</span></strong></summary>
                         <p>Our sausage burritos are wrapped in keto friendly tortillas with 3 eggs, tomatoes, and green peppers.
                             *comes with a side of hashbrowns and buttered toast.</p>
                     </details>
@@ -324,7 +324,7 @@
     <ul>
         <ul>
             <h2 style="text-align: center;">Food:</h2>
-            <li id="foodcart"></li>
+            <li id="itemsInCart"></li>
         </ul>
         <li id="taxtotal">Tax: $0.00</li>
         <li id="tiptotal">Tip: $0.00</li>
