--- a/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
+++ b/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
@@ -56,7 +56,7 @@
             <button class="orderbtn" id="cheeseburgerbtn">Add to order</button>
            <label for="quantity">Quantity</label>
             <select name="burgerquantity" id="burgerquantity">
-                <option value="1">1</option>
+                <option selected value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
@@ -99,7 +99,7 @@
         <button class="orderbtn" id="joebtn">Add to order</button>
        <label for="quantity">Quantity</label>
         <select name="joequantity" id="joequantity">
-            <option value="1">1</option>
+            <option selected value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
@@ -322,9 +322,21 @@
 <summary style="text-align: center;"><h2>Order Summary</h2></summary>
 <div class="ordersummary">
     <ul>
-        <ul>
-            <h2 style="text-align: center;">Food:</h2>
-            <li id="itemsInCart"></li>
+        <h2 style="text-align: center;">Food:</h2>
+        <ul class="items-inCart">
+            
+            <li id="itemsInCart1" style="display:none;"><button class="remove">REMOVE</button></li>
+            <li id="itemsInCart2" style="display:none;"></li>
+            <li id="itemsInCart3" style="display:none;"></li>
+            <li id="itemsInCart4" style="display:none;"></li>
+            <li id="itemsInCart5" style="display:none;"></li>
+            <li id="itemsInCart6" style="display:none;"></li>
+            <li id="itemsInCart7" style="display:none;"></li>
+            <li id="itemsInCart8" style="display:none;"></li>
+            <li id="itemsInCart9" style="display:none;"></li>
+            <li id="itemsInCart10" style="display:none;"></li>
+            <li id="itemsInCart11" style="display:none;"></li>
+            <li id="itemsInCart12" style="display:none;"></li>
         </ul>
         <li id="taxtotal">Tax: $0.00</li>
         <li id="tiptotal">Tip: $0.00</li>
