fixed footer email tag

--- a/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
+++ b/assign3_Carlos_Carbajal-19174/HTML_files/menu.html
@@ -353,7 +353,7 @@
 
     <footer>
         <p>Follow us on Instagram &#64;HonestlyAmazingCafe and tag us in your pictures taken here using &#35;HonestlyAmazing.</p>
-        <p>Business or Promotion inquiries? Contact us at HAbusiness@hacafe.net. 2024 Honestly <em>Amazing</em> Cafeteria, All rights reserved.</p>
+        <p>Business or Promotion inquiries? Contact us at <a href="mailto:HAbusiness@hacafe.net">HAbusiness@hacafe.net</a>. 2024 Honestly <em>Amazing</em> Cafeteria, All rights reserved.</p>
         <p>All menu images from <a href="https://www.gettyimages.dk/">GettyImages</a></p>
     </footer>
 
